# profanity

./: configure.ac  install-all.sh
src/: jabber.c
